force-app/main/default/objects/ScanedResult__c/ScanedResult__c.object-meta.xml
<CustomObject>
    <label>スキャン結果</label>
    <nameField>
        <displayFormat>BAR-{0000}</displayFormat>
        <label>スキャン結果番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>