force-app/main/default/objects/ScanedResult__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <label>商品説明</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>