force-app/main/default/objects/ScanedResult__c/fields/FixedPrice__c.field-meta.xml
<CustomField>
    <fullName>FixedPrice__c</fullName>
    <label>メーカー小売希望価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>