force-app/main/default/objects/ScanedResult__c/fields/FlowLog__c.field-meta.xml
<CustomField>
    <fullName>FlowLog__c</fullName>
    <label>FlowLog</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>