force-app/main/default/objects/ScanedResult__c/fields/HeadLine__c.field-meta.xml
<CustomField>
    <fullName>HeadLine__c</fullName>
    <label>キャッチコピー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>