force-app/main/default/objects/ScanedResult__c/fields/JAN_Code__c.field-meta.xml
<CustomField>
    <fullName>JAN_Code__c</fullName>
    <label>JANコード</label>
    <length>13</length>
    <type>Text</type>
</CustomField>