force-app/main/default/objects/ScanedResult__c/fields/MediumImageUrl__c.field-meta.xml
<CustomField>
    <fullName>MediumImageUrl__c</fullName>
    <label>商品画像(中)URL</label>
    <type>Url</type>
</CustomField>