force-app/main/default/objects/ScanedResult__c/fields/ProductImage__c.field-meta.xml
<CustomField>
    <fullName>ProductImage__c</fullName>
    <formula>IF (ISBLANK( SmallImageUrl__c), &quot;NO IMAGE&quot;,  IMAGE( SmallImageUrl__c, &quot;&quot;, 76, 76) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商品画像</label>
    <type>Text</type>
</CustomField>