force-app/main/default/objects/ScanedResult__c/fields/ProductUrl__c.field-meta.xml
<CustomField>
    <fullName>ProductUrl__c</fullName>
    <label>商品URL</label>
    <type>Url</type>
</CustomField>