force-app/main/default/objects/ScanedResult__c/fields/SmallImageUrl__c.field-meta.xml
<CustomField>
    <fullName>SmallImageUrl__c</fullName>
    <label>商品画像(小)URL</label>
    <type>Url</type>
</CustomField>