force-app/main/default/objects/ScanedResult__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>検索/再検索待ち</fullName>
            </value>
            <value>
                <fullName>正常</fullName>
            </value>
            <value>
                <fullName>見つかりません</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>