force-app/main/default/objects/ScanedResult__c/fields/TaxIncluded__c.field-meta.xml
<CustomField>
    <fullName>TaxIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>税込み表示</label>
    <type>Checkbox</type>
</CustomField>