force-app/main/default/objects/ScanedResult__c/validationRules/JAN_Code_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>JAN_Code_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( JAN_Code__c )</errorConditionFormula>
    <errorMessage>JANコードは必須です</errorMessage>
</ValidationRule>